# instant-ngp-webui

./: .gitignore  README.md  gui.bat  install.bat  pyproject.toml  requirements.txt
common/: __init__.py  constants.py
instant_ngp/gui/: app.py  commands.py  sidebar.py  states.py  ui.py  utilities.py
scripts/: install.py  utilities.py
